# grass

./: .backportrc.json  .clang-format  .cmake-format.py  .coveragerc  .cspell.json  .editorconfig  .env  .flake8  .gitattributes  .gitignore  .gunittest.cfg  .gunittest.extra.cfg  .gunittest2.cfg  .pre-commit-config.yaml  .pylintrc.old  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  ClangBuildAnalyzerSession.txt  Dockerfile  Doxyfile  INSTALL.md  Makefile  REQUIREMENTS.md  SECURITY.md  Untitled-1.json  Untitled-2.json  Untitled-3-pr.json  Untitled-4-pr-event.json  Untitled-7.json  Untitled-8-pr.json  a-conftest.json  action.ps1  arm.Dockerfile  clangprofile-linux1  codecov.yml  compile_commands.json  configure  conftest.py  (+50 more)
.devcontainer/: devcontainer.json
.github/: actionlint.yaml  labeler.yml
.github/codeql/: codeql-config.yml
.github/workflows/: .env  additional_checks.yml  backport.yml  build_osgeo4w.sh  build_ubuntu-22.04.sh  build_ubuntu-24.04.sh  check_test_cases.sh  clang-format-check.yml  cmake.yml  codeql-analysis.yml  codeql.yml  create_release_draft.yml  docker.yml  documentation.yml  gcc.yml  label.yml  macos.yml  macos_dependencies.txt  macos_gunittest.cfg  macos_install.sh  milestones.yml  osgeo4w.yml  osgeo4w_gunittest.cfg  periodic_update.yml  post-pr-reviews.yml  print_versions.sh  pytest.yml  pytest_args_ci.txt  pytest_args_cov.txt  pytest_args_gunittest.txt  pytest_args_not_parallel.txt  pytest_args_parallel.txt  python-code-quality.yml  super-linter.yml  test_simple_msys.sh  test_thorough.bat  test_thorough.sh  titles.yml  ubuntu.yml  verify-success.yml  (+1 more)
.travis/: linux.install.sh  linux.script.sh
buildlog/: ClangBuildAnalyzerSession.txt
cmake/: IncludeCheck.cmake  copy_g_gui_module.cmake  ctypesgen.cmake  locale_strings.cmake
cmake/find_scripts/: FindCairo.cmake  FindGEOS.cmake  FindPROJ.cmake  FindSQLite.cmake.old
cmake/modules/: CheckDependentLibraries.cmake  build_gui_in_subdir.cmake  build_library_in_subdir.cmake  build_module.cmake  build_program.cmake  build_program_in_subdir.cmake  build_script_in_subdir.cmake  code-coverage.cmake  copy_python_files_in_subdir.cmake  get_host_arch.cmake  get_versions.cmake  repo_status.cmake  set_compiler_flags.cmake
db/: CMakeLists.txt  databaseintro.md
db/db.connect/: main.c
db/db.copy/: main.c
db/db.databases/: main.c
db/db.describe/: main.c
db/db.execute/: main.c
db/drivers/: CMakeLists.txt
display/: CMakeLists.txt
display/d.barscale/: main.c
display/d.erase/: main.c
display/d.extract/: extract.c  main.c
display/d.grid/: main.c
display/d.mon/: render_cmd.py  start.c
display/d.vect/: main.c
display/d.vect.thematic/: main.c
doc/: Makefile  grass_database.md  howto_release.md  infrastructure.md  interfaces_overview.md  jupyter_intro.md  python_intro.md
doc/notebooks/: hydrology.ipynb  jupyter_tutorial.ipynb
docker/: README.md
docker/alpine/: Dockerfile
docker/debian/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu_wxgui/: Dockerfile
general/: CMakeLists.txt
general/g.gui/: main.c
general/g.mapset/: main.c
general/g.version/: main.c
gui/: CMakeLists.txt
gui/icons/: CMakeLists.txt  README.md
gui/images/: CMakeLists.txt
gui/wxpython/: CMakeLists.txt  Makefile  pyproject.toml  wxgui.py
imagery/: CMakeLists.txt  imageryintro.md
imagery/i.atcorr/: create_iwave.py  main.cpp
imagery/i.cluster/: main.c
imagery/i.gensigset/: read_data.c
imagery/i.ifft/: main.c
imagery/i.landsat.acca/: algorithm.c  local_proto.h  main.c
imagery/i.maxlik/: invert.c
imagery/i.ortho.photo/: CMakeLists.txt
include/: CMakeLists.txt  VERSION  gis.h
include/Make/: Doxyfile_arch_html.in  Doxyfile_arch_latex.in  Html.make  HtmlRules.make  Install.make  Module.make  Multi.make  Python.make  Script.make
include/grass/: config.h.cmake.in  gis.h  nviz.h
lib/: CMakeLists.txt
lib/datetime/: CMakeLists.txt
lib/db/: CMakeLists.txt
lib/gis/: CMakeLists.txt  make_loc.c  paths.c  sleep.c  spawn.c  user_config.c  win32_pipes.c
lib/gis/tests/: lib_gis_env_test.py
lib/gmath/: la.c
lib/imagery/: group.c  iscatt_core.c
lib/init/: CMakeLists.txt  grass.py  winlocale.c
lib/pngdriver/: graph_close.c  graph_set.c  pngdriver.h
lib/proj/: CMakeLists.txt
lib/raster/: close.c  histogram.c
lib/raster3d/: close.c  history.c  mask.c  open2.c
lib/rst/: CMakeLists.txt
lib/temporal/: CMakeLists.txt
lib/vector/: CMakeLists.txt
locale/: Makefile  grass_po_stats.py
locale/po/: grasslibs_ar.po  grasslibs_bn.po  grasslibs_cs.po  grasslibs_de.po  grasslibs_el.po  grasslibs_es.po  grasslibs_fi.po  grasslibs_fr.po  grasslibs_hu.po  grasslibs_id_ID.po  grasslibs_it.po  grasslibs_ja.po  grasslibs_ko.po  grasslibs_lv.po  grasslibs_ml.po  grasslibs_pl.po  grasslibs_pt.po  grasslibs_pt_BR.po  grasslibs_ro.po  grasslibs_ru.po  grasslibs_si.po  grasslibs_sl.po  grasslibs_sv.po  grasslibs_ta.po  grasslibs_th.po  grasslibs_tr.po  grasslibs_uk.po  grasslibs_vi.po  grasslibs_zh.po  grasslibs_zh_CN.po  grassmods_ar.po  grassmods_bn.po  (+58 more)
macos/: ReadMe.md
man/: CMakeLists.txt  build_class.py  build_class_graphical.py  build_full_index.py  build_graphical_index.py  build_html.py  build_index.py  build_index_rest.py  build_keywords.py  build_manual_gallery.py  build_rest.py  build_topics.py  parser_standard_options.py
misc/: CMakeLists.txt
msvc/: fcntl.h  unistd.h
mswindows/: GRASS-Installer.nsi.tmpl  env.bat  generic.manifest
pack1/: manifest.rkm
raster/: CMakeLists.txt  rasterintro.md
raster3d/: CMakeLists.txt  raster3dintro.md
scripts/: CMakeLists.txt  conftest.py
temporal/: CMakeLists.txt  temporalintro.md
utils/: CMakeLists.txt  coverage_mapper.py  coveragemapper.py  create_python_init_file.py  detect_missing_include.sh  generate_last_commit_file.py  generate_release_notes.py  gitlog2changelog.py  md_isvalid.py  mkdocs.py  mkhtml.py  mkmarkdown.py  ppmrotate.py  prepare-code-coverage-artifact.py  slipcover_to_coverage.py  test_generate_last_commit_file.py  thumbnails.py
vector/: CMakeLists.txt  conftest.py  vectorintro.md
(+601 files in other folders)
